
[TestGetWebsiteBrowsers/Base - 1]
RECORDS:
&{StatsBrowsersSummary:{Browser:Safari Visitors:166918 VisitorsPercentage:0.3341} BounceRate:0.4996 Duration:5002}
&{StatsBrowsersSummary:{Browser:Firefox Visitors:166649 VisitorsPercentage:0.3335} BounceRate:0.4996 Duration:5027}
&{StatsBrowsersSummary:{Browser:Chrome Visitors:166090 VisitorsPercentage:0.3324} BounceRate:0.4996 Duration:4980}

---

[TestGetWebsiteBrowsers/Browser - 1]
RECORDS:
&{StatsBrowsersSummary:{Browser:Chrome Visitors:166090 VisitorsPercentage:1} BounceRate:0.5009 Duration:4980}

---

[TestGetWebsiteBrowsers/Country - 1]
RECORDS:
&{StatsBrowsersSummary:{Browser:Chrome Visitors:55243 VisitorsPercentage:1} BounceRate:0.4978 Duration:4992}

---

[TestGetWebsiteBrowsers/Device - 1]
RECORDS:
&{StatsBrowsersSummary:{Browser:Chrome Visitors:18661 VisitorsPercentage:1} BounceRate:0.4947 Duration:4997}

---

[TestGetWebsiteBrowsers/Empty - 1]
RECORDS:

---

[TestGetWebsiteBrowsers/Language - 1]
RECORDS:
&{StatsBrowsersSummary:{Browser:Chrome Visitors:9486 VisitorsPercentage:1} BounceRate:0.4931 Duration:5003}

---

[TestGetWebsiteBrowsers/OS - 1]
RECORDS:
&{StatsBrowsersSummary:{Browser:Chrome Visitors:3116 VisitorsPercentage:1} BounceRate:0.5 Duration:4971}

---

[TestGetWebsiteBrowsers/Pathname - 1]
RECORDS:
&{StatsBrowsersSummary:{Browser:Chrome Visitors:1090 VisitorsPercentage:1} BounceRate:0.4945 Duration:5098}

---

[TestGetWebsiteBrowsers/Referrer - 1]
RECORDS:
&{StatsBrowsersSummary:{Browser:Chrome Visitors:381 VisitorsPercentage:1} BounceRate:0.5363 Duration:4728}

---

[TestGetWebsiteBrowsers/UTMCampaign - 1]
RECORDS:
&{StatsBrowsersSummary:{Browser:Chrome Visitors:116 VisitorsPercentage:1} BounceRate:0.5439 Duration:4732}

---

[TestGetWebsiteBrowsers/UTMMedium - 1]
RECORDS:
&{StatsBrowsersSummary:{Browser:Chrome Visitors:35 VisitorsPercentage:1} BounceRate:0.4615 Duration:6547}

---

[TestGetWebsiteBrowsers/UTMSource - 1]
RECORDS:
&{StatsBrowsersSummary:{Browser:Chrome Visitors:17 VisitorsPercentage:1} BounceRate:0.6 Duration:3389}

---

[TestGetWebsiteBrowsersSummary/Base - 1]
RECORDS:
&{Browser:Safari Visitors:166918 VisitorsPercentage:0.3341}
&{Browser:Firefox Visitors:166649 VisitorsPercentage:0.3335}
&{Browser:Chrome Visitors:166090 VisitorsPercentage:0.3324}

---

[TestGetWebsiteBrowsersSummary/Browser - 1]
RECORDS:
&{Browser:Chrome Visitors:166090 VisitorsPercentage:1}

---

[TestGetWebsiteBrowsersSummary/Country - 1]
RECORDS:
&{Browser:Chrome Visitors:55243 VisitorsPercentage:1}

---

[TestGetWebsiteBrowsersSummary/Device - 1]
RECORDS:
&{Browser:Chrome Visitors:18661 VisitorsPercentage:1}

---

[TestGetWebsiteBrowsersSummary/Empty - 1]
RECORDS:

---

[TestGetWebsiteBrowsersSummary/Language - 1]
RECORDS:
&{Browser:Chrome Visitors:9486 VisitorsPercentage:1}

---

[TestGetWebsiteBrowsersSummary/OS - 1]
RECORDS:
&{Browser:Chrome Visitors:3116 VisitorsPercentage:1}

---

[TestGetWebsiteBrowsersSummary/Pathname - 1]
RECORDS:
&{Browser:Chrome Visitors:1090 VisitorsPercentage:1}

---

[TestGetWebsiteBrowsersSummary/Referrer - 1]
RECORDS:
&{Browser:Chrome Visitors:381 VisitorsPercentage:1}

---

[TestGetWebsiteBrowsersSummary/UTMCampaign - 1]
RECORDS:
&{Browser:Chrome Visitors:116 VisitorsPercentage:1}

---

[TestGetWebsiteBrowsersSummary/UTMMedium - 1]
RECORDS:
&{Browser:Chrome Visitors:35 VisitorsPercentage:1}

---

[TestGetWebsiteBrowsersSummary/UTMSource - 1]
RECORDS:
&{Browser:Chrome Visitors:17 VisitorsPercentage:1}

---

[TestGetWebsiteDevices/Base - 1]
RECORDS:
&{StatsDevicesSummary:{Device:Desktop Visitors:166959 VisitorsPercentage:0.3341} BounceRate:0.4996 Duration:5005}
&{StatsDevicesSummary:{Device:Tablet Visitors:166722 VisitorsPercentage:0.3337} BounceRate:0.4996 Duration:4995}
&{StatsDevicesSummary:{Device:Mobile Visitors:165976 VisitorsPercentage:0.3322} BounceRate:0.4996 Duration:5006}

---

[TestGetWebsiteDevices/Browser - 1]
RECORDS:
&{StatsDevicesSummary:{Device:Desktop Visitors:55422 VisitorsPercentage:0.3337} BounceRate:0.5009 Duration:4995}
&{StatsDevicesSummary:{Device:Mobile Visitors:55360 VisitorsPercentage:0.3333} BounceRate:0.5009 Duration:4999}
&{StatsDevicesSummary:{Device:Tablet Visitors:55308 VisitorsPercentage:0.333} BounceRate:0.5009 Duration:4940}

---

[TestGetWebsiteDevices/Country - 1]
RECORDS:
&{StatsDevicesSummary:{Device:Desktop Visitors:18661 VisitorsPercentage:0.3378} BounceRate:0.4978 Duration:4997}
&{StatsDevicesSummary:{Device:Mobile Visitors:18333 VisitorsPercentage:0.3319} BounceRate:0.4978 Duration:4994}
&{StatsDevicesSummary:{Device:Tablet Visitors:18249 VisitorsPercentage:0.3303} BounceRate:0.4978 Duration:4983}

---

[TestGetWebsiteDevices/Device - 1]
RECORDS:
&{StatsDevicesSummary:{Device:Desktop Visitors:18661 VisitorsPercentage:1} BounceRate:0.4947 Duration:4997}

---

[TestGetWebsiteDevices/Empty - 1]
RECORDS:

---

[TestGetWebsiteDevices/Language - 1]
RECORDS:
&{StatsDevicesSummary:{Device:Desktop Visitors:9486 VisitorsPercentage:1} BounceRate:0.4931 Duration:5003}

---

[TestGetWebsiteDevices/OS - 1]
RECORDS:
&{StatsDevicesSummary:{Device:Desktop Visitors:3116 VisitorsPercentage:1} BounceRate:0.5 Duration:4971}

---

[TestGetWebsiteDevices/Pathname - 1]
RECORDS:
&{StatsDevicesSummary:{Device:Desktop Visitors:1090 VisitorsPercentage:1} BounceRate:0.4945 Duration:5098}

---

[TestGetWebsiteDevices/Referrer - 1]
RECORDS:
&{StatsDevicesSummary:{Device:Desktop Visitors:381 VisitorsPercentage:1} BounceRate:0.5363 Duration:4728}

---

[TestGetWebsiteDevices/UTMCampaign - 1]
RECORDS:
&{StatsDevicesSummary:{Device:Desktop Visitors:116 VisitorsPercentage:1} BounceRate:0.5439 Duration:4732}

---

[TestGetWebsiteDevices/UTMMedium - 1]
RECORDS:
&{StatsDevicesSummary:{Device:Desktop Visitors:35 VisitorsPercentage:1} BounceRate:0.4615 Duration:6547}

---

[TestGetWebsiteDevices/UTMSource - 1]
RECORDS:
&{StatsDevicesSummary:{Device:Desktop Visitors:17 VisitorsPercentage:1} BounceRate:0.6 Duration:3389}

---

[TestGetWebsiteDevicesSummary/Base - 1]
RECORDS:
&{Device:Desktop Visitors:166959 VisitorsPercentage:0.3341}
&{Device:Tablet Visitors:166722 VisitorsPercentage:0.3337}
&{Device:Mobile Visitors:165976 VisitorsPercentage:0.3322}

---

[TestGetWebsiteDevicesSummary/Browser - 1]
RECORDS:
&{Device:Desktop Visitors:55422 VisitorsPercentage:0.3337}
&{Device:Mobile Visitors:55360 VisitorsPercentage:0.3333}
&{Device:Tablet Visitors:55308 VisitorsPercentage:0.333}

---

[TestGetWebsiteDevicesSummary/Country - 1]
RECORDS:
&{Device:Desktop Visitors:18661 VisitorsPercentage:0.3378}
&{Device:Mobile Visitors:18333 VisitorsPercentage:0.3319}
&{Device:Tablet Visitors:18249 VisitorsPercentage:0.3303}

---

[TestGetWebsiteDevicesSummary/Device - 1]
RECORDS:
&{Device:Desktop Visitors:18661 VisitorsPercentage:1}

---

[TestGetWebsiteDevicesSummary/Empty - 1]
RECORDS:

---

[TestGetWebsiteDevicesSummary/Language - 1]
RECORDS:
&{Device:Desktop Visitors:9486 VisitorsPercentage:1}

---

[TestGetWebsiteDevicesSummary/OS - 1]
RECORDS:
&{Device:Desktop Visitors:3116 VisitorsPercentage:1}

---

[TestGetWebsiteDevicesSummary/Pathname - 1]
RECORDS:
&{Device:Desktop Visitors:1090 VisitorsPercentage:1}

---

[TestGetWebsiteDevicesSummary/Referrer - 1]
RECORDS:
&{Device:Desktop Visitors:381 VisitorsPercentage:1}

---

[TestGetWebsiteDevicesSummary/UTMCampaign - 1]
RECORDS:
&{Device:Desktop Visitors:116 VisitorsPercentage:1}

---

[TestGetWebsiteDevicesSummary/UTMMedium - 1]
RECORDS:
&{Device:Desktop Visitors:35 VisitorsPercentage:1}

---

[TestGetWebsiteDevicesSummary/UTMSource - 1]
RECORDS:
&{Device:Desktop Visitors:17 VisitorsPercentage:1}

---

[TestGetWebsiteOS/Base - 1]
RECORDS:
&{StatsOSSummary:{OS:iOS Visitors:166647 VisitorsPercentage:0.3335} BounceRate:0.4996 Duration:5006}
&{StatsOSSummary:{OS:Windows Visitors:166538 VisitorsPercentage:0.3333} BounceRate:0.4996 Duration:5001}
&{StatsOSSummary:{OS:Linux Visitors:166472 VisitorsPercentage:0.3332} BounceRate:0.4996 Duration:5002}

---

[TestGetWebsiteOS/Browser - 1]
RECORDS:
&{StatsOSSummary:{OS:Linux Visitors:55412 VisitorsPercentage:0.3336} BounceRate:0.5009 Duration:4997}
&{StatsOSSummary:{OS:Windows Visitors:55394 VisitorsPercentage:0.3335} BounceRate:0.5009 Duration:4969}
&{StatsOSSummary:{OS:iOS Visitors:55284 VisitorsPercentage:0.3329} BounceRate:0.5009 Duration:4975}

---

[TestGetWebsiteOS/Country - 1]
RECORDS:
&{StatsOSSummary:{OS:iOS Visitors:18554 VisitorsPercentage:0.3359} BounceRate:0.4978 Duration:5002}
&{StatsOSSummary:{OS:Linux Visitors:18365 VisitorsPercentage:0.3324} BounceRate:0.4978 Duration:5046}
&{StatsOSSummary:{OS:Windows Visitors:18324 VisitorsPercentage:0.3317} BounceRate:0.4978 Duration:4930}

---

[TestGetWebsiteOS/Device - 1]
RECORDS:
&{StatsOSSummary:{OS:iOS Visitors:6314 VisitorsPercentage:0.3384} BounceRate:0.4947 Duration:4996}
&{StatsOSSummary:{OS:Linux Visitors:6175 VisitorsPercentage:0.3309} BounceRate:0.4947 Duration:5021}
&{StatsOSSummary:{OS:Windows Visitors:6172 VisitorsPercentage:0.3307} BounceRate:0.4947 Duration:4978}

---

[TestGetWebsiteOS/Empty - 1]
RECORDS:

---

[TestGetWebsiteOS/Language - 1]
RECORDS:
&{StatsOSSummary:{OS:iOS Visitors:3246 VisitorsPercentage:0.3422} BounceRate:0.4931 Duration:5011}
&{StatsOSSummary:{OS:Linux Visitors:3124 VisitorsPercentage:0.3293} BounceRate:0.4931 Duration:5040}
&{StatsOSSummary:{OS:Windows Visitors:3116 VisitorsPercentage:0.3285} BounceRate:0.4931 Duration:4971}

---

[TestGetWebsiteOS/OS - 1]
RECORDS:
&{StatsOSSummary:{OS:Windows Visitors:3116 VisitorsPercentage:1} BounceRate:0.5 Duration:4971}

---

[TestGetWebsiteOS/Pathname - 1]
RECORDS:
&{StatsOSSummary:{OS:Windows Visitors:1090 VisitorsPercentage:1} BounceRate:0.4945 Duration:5098}

---

[TestGetWebsiteOS/Referrer - 1]
RECORDS:
&{StatsOSSummary:{OS:Windows Visitors:381 VisitorsPercentage:1} BounceRate:0.5363 Duration:4728}

---

[TestGetWebsiteOS/UTMCampaign - 1]
RECORDS:
&{StatsOSSummary:{OS:Windows Visitors:116 VisitorsPercentage:1} BounceRate:0.5439 Duration:4732}

---

[TestGetWebsiteOS/UTMMedium - 1]
RECORDS:
&{StatsOSSummary:{OS:Windows Visitors:35 VisitorsPercentage:1} BounceRate:0.4615 Duration:6547}

---

[TestGetWebsiteOS/UTMSource - 1]
RECORDS:
&{StatsOSSummary:{OS:Windows Visitors:17 VisitorsPercentage:1} BounceRate:0.6 Duration:3389}

---

[TestGetWebsiteOSSummary/Base - 1]
RECORDS:
&{OS:iOS Visitors:166647 VisitorsPercentage:0.3335}
&{OS:Windows Visitors:166538 VisitorsPercentage:0.3333}
&{OS:Linux Visitors:166472 VisitorsPercentage:0.3332}

---

[TestGetWebsiteOSSummary/Browser - 1]
RECORDS:
&{OS:Linux Visitors:55412 VisitorsPercentage:0.3336}
&{OS:Windows Visitors:55394 VisitorsPercentage:0.3335}
&{OS:iOS Visitors:55284 VisitorsPercentage:0.3329}

---

[TestGetWebsiteOSSummary/Country - 1]
RECORDS:
&{OS:iOS Visitors:18554 VisitorsPercentage:0.3359}
&{OS:Linux Visitors:18365 VisitorsPercentage:0.3324}
&{OS:Windows Visitors:18324 VisitorsPercentage:0.3317}

---

[TestGetWebsiteOSSummary/Device - 1]
RECORDS:
&{OS:iOS Visitors:6314 VisitorsPercentage:0.3384}
&{OS:Linux Visitors:6175 VisitorsPercentage:0.3309}
&{OS:Windows Visitors:6172 VisitorsPercentage:0.3307}

---

[TestGetWebsiteOSSummary/Empty - 1]
RECORDS:

---

[TestGetWebsiteOSSummary/Language - 1]
RECORDS:
&{OS:iOS Visitors:3246 VisitorsPercentage:0.3422}
&{OS:Linux Visitors:3124 VisitorsPercentage:0.3293}
&{OS:Windows Visitors:3116 VisitorsPercentage:0.3285}

---

[TestGetWebsiteOSSummary/OS - 1]
RECORDS:
&{OS:Windows Visitors:3116 VisitorsPercentage:1}

---

[TestGetWebsiteOSSummary/Pathname - 1]
RECORDS:
&{OS:Windows Visitors:1090 VisitorsPercentage:1}

---

[TestGetWebsiteOSSummary/Referrer - 1]
RECORDS:
&{OS:Windows Visitors:381 VisitorsPercentage:1}

---

[TestGetWebsiteOSSummary/UTMCampaign - 1]
RECORDS:
&{OS:Windows Visitors:116 VisitorsPercentage:1}

---

[TestGetWebsiteOSSummary/UTMMedium - 1]
RECORDS:
&{OS:Windows Visitors:35 VisitorsPercentage:1}

---

[TestGetWebsiteOSSummary/UTMSource - 1]
RECORDS:
&{OS:Windows Visitors:17 VisitorsPercentage:1}

---
